--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
     text-align: left;
     line-height: 1.5;
     margin: 0;
-    padding: 20px;
+    padding: 0;
 }
 
 label {display: none;}
