--- a/src/styles.css
+++ b/src/styles.css
@@ -72,15 +72,45 @@
 }
 
 /*===== Input =====*/
+#reviews-input-wrapper {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
 #reviews-input {
     width: 100%;
     padding: var(--padding);
     border: var(--border);
     border-radius: var(--radius);
+    padding-right: 2rem;
 }
 
 #reviews-input:hover {
     border-color: var(--color-hover);
+}
+
+#reviews-input-reset {
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    border: none;
+    background: var(--color-bg);
+    color: var(--color-text);
+    font-size: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+}
+
+#reviews-input-reset:hover {
+    background-color: var(--color-hover);
 }
 
 /*===== Dropdown =====*/
