--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
     --color-hover: #ddd;
     --color-border: #e7e7e7;
     --border: 0.05rem solid var(--color-border);
+    --border-none: 0.05rem solid #00000000;
     --radius: 0.5rem;
     --padding: 0.5rem 1rem;
     --margin-block: 0.5rem;
@@ -31,12 +32,15 @@
 }
 
 /*===== Header =====*/
+#reviews-header-wrapper {
+    padding: var(--padding);
+    border-bottom: var(--border);
+}
+
 #reviews-header-row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: var(--padding);
-    border-bottom: var(--border);
 }
 
 #reviews-header {
@@ -69,6 +73,11 @@
 
 #reviews-isu-box a:hover {
     background: var(--color-primary-hover);
+}
+
+#reviews-status-box {
+    margin: 0;
+    padding-bottom: 0.5rem;
 }
 
 /*===== Input =====*/
@@ -303,6 +312,8 @@
 /*===== Menu =====*/
 .reviews-menu {
     width: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
 .reviews-menu-item {
@@ -327,4 +338,130 @@
 
 .reviews-menu-item:disabled:hover {
     border-color: var(--color-border);
+}
+
+/** Add review */
+.add-rev-label {
+    margin: 1rem 0 0.5rem 0;
+    color: var(--color-text);
+}
+
+.add-rev-label:first-child {
+    margin: 0 0 0.5rem 0;
+}
+
+.add-rev-status {
+    margin: 0.5rem 0;
+    color: var(--color-muted);
+}
+
+.rev-input-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.rev-button {
+    width: 100%;
+    font-weight: bold;
+    background: var(--color-primary);
+    color: var(--color-bg);
+    padding: var(--padding);
+    border-radius: var(--radius);
+    border: var(--border-none);
+    margin-top: var(--margin-block);
+}
+
+.rev-button:hover {
+    background: var(--color-primary-hover);
+}
+
+/** Reviews List */
+.rev-list {
+    margin-top: 0.5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.rev-list-title {
+    margin: 0 0.5rem 0.5rem 0;
+    color: var(--color-muted);
+}
+
+.rev-list-item {
+    position: relative;
+    cursor: pointer;
+    background: var(--color-bg);
+    color: var(--color-text);
+    padding: 0.325rem 2.325rem 0.325rem 0.325rem;
+    border: var(--border);
+    border-radius: var(--radius);
+    margin-bottom: var(--margin-block);
+    margin-right: var(--margin-block);
+}
+
+.rev-list-item-reset {
+    cursor: pointer;
+    position: absolute;
+    right: 0.5rem;
+    top: 0.325rem;
+    background: var(--color-bg);
+    color: var(--color-text);
+    font-size: 1.5rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    border: none;
+    border-radius: 50%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.rev-list-item-reset:hover {
+    background-color: var(--color-hover);
+}
+
+/** Reviews comment textarea */
+.comment-textarea-wrapper {
+    position: relative;
+}
+
+.comment-input {
+    width: 100%;
+    min-height: 10rem;
+    padding: 0.5rem 1rem 1.5rem 1rem;
+    resize: vertical;
+
+    font-family: inherit;
+
+    border: var(--border);
+    border-radius: var(--radius);
+}
+
+.comment-input:hover {
+    border-color: var(--color-hover);
+}
+
+.comment-input::placeholder {
+    color: var(--color-muted);
+}
+
+.comment-char-counter {
+    position: absolute;
+    right: 0.5rem;
+    bottom: 0.5rem;
+
+    font-size: 14px;
+    color: var(--color-muted);
+    pointer-events: none;
+}
+
+.comment-input.limit-exceeded {
+    border-color: var(--color-danger);
+}
+
+.comment-char-counter.limit-exceeded {
+    color: var(--color-danger);
 }
